// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with data 1`] = `
<div
  className="content-container filtered"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <ExpenseListItem
    amount={10950}
    createdAt={-259200000}
    description="Banana"
    id="1"
    key="1"
    note=""
  />
  <ExpenseListItem
    amount={12950}
    createdAt={0}
    description="Onion"
    id="2"
    key="2"
    note=""
  />
  <ExpenseListItem
    amount={14950}
    createdAt={259200000}
    description="Carrot"
    id="3"
    key="3"
    note=""
  />
</div>
`;

exports[`should render ExpenseList with no data and show a message 1`] = `
<div
  className="content-container filtered"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-items list-items-empty"
  >
    <p>
      There is no expenses to show
    </p>
  </div>
</div>
`;
